<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.airbnb.lottie.LottieAnimationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/alien"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/alien"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/localiser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/localiser"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/localisezMoi"
        app:layout_constraintBottom_toTopOf="@+id/historique"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alien" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/historique"
        android:text="@string/historique"
        app:layout_constraintBottom_toTopOf="@id/boutonVider"
        app:layout_constraintTop_toBottomOf="@+id/localiser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
    <Button
        android:id="@+id/boutonVider"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/viderHisto"
        app:layout_constraintBottom_toTopOf="@id/youtube"
        app:layout_constraintTop_toBottomOf="@+id/historique"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <ImageView
        android:id="@+id/boutonSetting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/youtube"
        android:text="@string/followMoi"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boutonVider"
        />

</androidx.constraintlayout.widget.ConstraintLayout>