<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.airbnb.lottie.LottieAnimationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/map"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/map"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/distanceText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/distanceEseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceEseo"
        app:layout_constraintBottom_toTopOf="@+id/distanceText"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distanceText"
        android:text="@string/distanceText"
        app:layout_constraintBottom_toTopOf="@id/meLocaliser"
        app:layout_constraintTop_toBottomOf="@+id/distanceEseo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

    />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/meLocaliser"
        android:text="@string/localisezMoi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceEseo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

    />


</androidx.constraintlayout.widget.ConstraintLayout>
