<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.airbnb.lottie.LottieAnimationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Splash.SplashActivity">

    <TextView
        android:id="@+id/titreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreApp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/animationLoading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationLoading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@+id/titreApp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nom"/>


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

    />
    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomPrenom"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
      />



</androidx.constraintlayout.widget.ConstraintLayout>